# molsysviewer

./: .buildinfo  .codecov.yml  .coveragerc  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README_DEVELOPERS.md  environment.yml  genindex.html  index.html  modules.html  molsysviewer.html  objects.inv  pending_prompts_codex.md  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: sphinx_docs_to_gh_pages.yaml
_modules/: index.html
_modules/molsysviewer/: molsysmt_integration.html  viewer.html  widget.html
_sources/: index.ipynb.txt  modules.rst.txt  molsysviewer.rst.txt
api/developers/: api_developers.html
api/users/: api_users.html
content/: ai_assistants.html
content/about/: citation.html  index.html  installation.html  what.html  who.html
content/developer/: index.html  stype_types.html  type_annotations_guidelines.html
content/showcase/: index.html
content/user/: index.html
dev/guide/: CHECKPOINT.md  CHECKPOINT_shapes.md  MolSysViewer_STRUCTURE.md  ROADMAP.md  STRUCTURE.md  checkpoint_1.md  checkpoint_2.md  checkpoint_3.md  next_steps.md
devguide/: CHECKPOINT.md  DEV_SETUP.md  MolSysView_DESIGN_OVERVIEW.md  MolSysView_ROADMAP.md  NEXT_STEPS.md  README.md  STRUCTURE.md
devguide/DESIGN/: ARCHITECTURE.md  DECISIONS.md
devguide/HISTORY/: CHANGES_NOTES.md  CHECKPOINT_2025-11-18.md
devguide/PLANNING/: NEXT_STEPS.md  RELEASE_PLAN.md  ROADMAP.md
devguide/STRUCTURE/: MODULES_OVERVIEW.md  REPO_STRUCTURE.md
devtools/conda-envs/: build_env.yaml  development_env.yaml  docs_env.yaml
devtools/conda_build/: build.sh  meta.yaml
devtools/conda_envs/: build_env.yaml  development_env.yaml
docs/: conf.py  index.ipynb  index.nbconvert.last_run
docs/content/: ai_assistants.md
js/: package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: index.ts  molstar_plugin.ts  widget.ts
molsysviewer/: __init__.py  demo.py  load.py  messaging.py  molsysmt_integration.py  shapes.py  viewer.js  viewer.py  widget.py
molsysviewer/js/: AGENTS.md  package-lock.json  package.json  tsconfig.json
molsysviewer/loaders/: __init__.py  load_from_url.py  load_mmcif_string.py  load_molsysmt.py  load_pdb_id.py  load_pdb_string.py
molsysviewer/shapes/: __init__.py  displacements.py  links.py  pocket_surfaces.py  spheres.py  tetrahedra.py  triangle_faces.py  vectors.py
sandbox/: Smoke_Test.ipynb  Test.ipynb  Test_add_spheres.ipynb  Test_load.ipynb  Test_pdb_string_and_spheres.ipynb  test_load_url.ipynb  test_sphere.py
scripts/: bootstrap.sh  dev.sh
tests/: test_init.py
tests/loaders/: test_exports.py  (+5 more)
(+13 files in other folders)
