[project]
name = "molsysviewer"
version = "0.0.2"
description = "MolSysViewer with Mol* prototype"
authors = [{name = "UIBCDF"}]
requires-python = ">=3.10"
dependencies = ["anywidget"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["molsysviewer"]
