[project]
name = "molsysviewer"
version = "0.0.2"
description = "MolSysViewer with Mol* prototype"
authors = [{name = "UIBCDF"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anywidget"
]
license = { text = "MIT" }  # o la que uses
urls = { "Homepage" = "https://github.com/uibcdf/molsysviewer" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["molsysviewer"]

[tool.setuptools.package-data]
"molsysviewer" = ["viewer.js"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"
# directorios a analizar (ajusta si quieres)
src = ["molsysviewer", "tests"]

# Reglas base (similar a flake8 + import order, etc.)
select = [
  "E",  # errores estilo (flake8)
  "W",  # warnings estilo
  "F",  # errores pyflakes
  "I",  # isort (orden de imports)
  "B",  # bugbear
]
ignore = [
  "E203",  # compatible con black (espacios antes de ':')
  "W503",  # compatible con black (line break before operator)
]

[tool.ruff.format]
# Black sigue siendo el formateador principal, pero esto futura-prueba si usas `ruff format`
quote-style = "double"
indent-style = "space"
line-ending = "lf"

